objects/privacycenter__Privacy_Center_Configuration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>privacycenter__Current_Execution_Id__c</fullName>
        <label>Current Execution Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>privacycenter__Heroku_App_Name__c</fullName>
        <label>Heroku App Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>privacycenter__Heroku_Connect_Region__c</fullName>
        <label>Heroku Connect Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>privacycenter__Previous_Version_Number__c</fullName>
        <label>Previous Version Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Privacy Center Configuration</label>
</CustomObject>